--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1,5 +1,9 @@
 \newcommand{\version}{0.8}
 
+%color highlight, for editing
+\usepackage{color}
+\newcommand{\red}[1]{#1} %{\color{red}{#1}}} % currently, no color highlighting
+
 %todo
 % explain: extensions for small additions, unions for sums of large OMS
 % %safe as synonym for %cons
@@ -455,10 +459,6 @@ author=,date=,id=,replyto=,type=}{}%
 
 
 
-%color highlight, for editing
-\usepackage{color}
-
-\newcommand{\red}[1]{{\color{red}{#1}}}
 
 
 
@@ -954,6 +954,8 @@ This is left for future work.
 \end{longtable}
 \end{center}
 
+\clearpage
+
 \section{Issues to be discussed}
 
 \begin{center}
@@ -1025,6 +1027,8 @@ A registry is discussed in clause \ref{c:conformance}.
 %	
 \end{longtable}
 \end{center}
+
+\clearpage
 
 \section{Evaluation Criteria}
 
@@ -1101,10 +1105,8 @@ Logical languages are used in several fields of computing for the development of
 An OMS provides formal descriptions which range in scope from domain knowledge and activities
 (ontologies, models) to properties and behaviors of hardware and software systems (models,
 specifications). These formal descriptions can be used for the analysis and verification of domain
-models, system models and systems themselves, using rigorous and effective reasoning tools.  Since these
-models and systems become increasingly complex, usually a monolithic description is not feasible.\todo{Terry: As  systems increase in complexity, it becomes concomitantly less practical to provide a logical cover for all.  Instead models are developed to represent different viewpoints or perspectives on a domain or system. Till: ``a logical cover for all'' is not the point, the point is a
-\emph{monolithic} description that is not feasible.}
-Instead, different viewpoints on one domain or system are modeled.  Hence, interoperability becomes
+models, system models and systems themselves, using rigorous and effective reasoning tools.   As  systems increase in complexity, it becomes concomitantly less practical to provide a monolithic logical cover for all.  Instead various models are developed to represent different viewpoints or perspectives on a domain or system. 
+ Hence, interoperability becomes
 a crucial issue, in particular, formal interoperability, i.e.\ interoperability that is based on
 the formal semantics of the different viewpoints. Interoperability is both about the ability to 
 interface different domains and systems, to enable the use of several OMS in a common application
@@ -3890,6 +3892,8 @@ Id                     = Letter , { LetterOrDigit } ;
 
 Note that we denote the empty prefix (called ``no prefix'' in \nisref{W3C/TR REC-rdfa-core-20120607, Section 6}) by a colon inside the prefix map, but completely omit it in CURIEs.  This is the style of the OWL Manchester syntax \cite{W3C:NOTE-owl2-manchester-syntax-20091027} but differs from the RDFa Core 1.1 syntax.
 
+\vspace{1em}
+
 \ssclause{OMS}\label{a:dol-text:OMS}
 
 \ednote{Till: is it correct to have \syntax{SymbolMapItems} in \syntax{reveal} and not \syntax{SymbolItems}?}
@@ -4068,7 +4072,7 @@ Double               = ($<$ a number $\in [0,1]$ $>$) ;
 \end{lstlisting}
 
 \ssclause{Queries}
-\red{new!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!}
+
 \begin{lstlisting}[language=ebnf,escapeinside={<>},mathescape]
 QueryRelatedDefn     = QueryDefn | SubstDefn | ResultDefn ;
 QueryDefn            = 'query', QueryName, '=', 'select', Vars, 
