--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -1,8 +1,5 @@
 \newcommand{\version}{0.8}
 
-%color highlight, for editing
-\usepackage{color}
-\newcommand{\red}[1]{#1} %{\color{red}{#1}}} % currently, no color highlighting
 
 %todo
 % explain: extensions for small additions, unions for sums of large OMS
@@ -36,6 +33,10 @@ draft%
 %final,
 ]{scrreprt}
 
+
+%color highlight, for editing
+\usepackage{color}
+\newcommand{\red}[1]{#1} %{\color{red}{#1}}} % currently, no color highlighting
 
 
 %% Hacks
@@ -757,15 +758,15 @@ Clause 0 of this document contains information specific to the OMG submission pr
 
 6.5.1(a) & 
 Proposals shall provide a specification of a metalanguage for relationships between the components
-of logically heterogeneous OSMs, particularly, given a language translation from a language L1 to
-another language L2, the application of the language translation to an OSM that is written in the
+of logically heterogeneous OMS, particularly, given a language translation from a language L1 to
+another language L2, the application of the language translation to an OMS that is written in the
 language L1. &
-DOL provides the required translation contruct using syntax \syntax{O with translation t}, see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
+DOL provides the required translation construct using syntax \syntax{O with translation t}, see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
 Moreover, DOL provides heterogeneous interpretations between OMS, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}. 
    \\ \hline
 %
 6.5.1(b) & 
-Proposals shall provide a specification of a metalanguage for the union of OSMs written in
+Proposals shall provide a specification of a metalanguage for the union of OMS written in
 different languages, which implicitly involves the application of suitable default translations in
 order to reach a common target language. &
 The syntax for unions is \syntax{O1 and O2}, see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}. Default translations are discussed in
@@ -774,31 +775,31 @@ environment explicitly specifies default translations, see \ref{c:direct-sematic
 	\\ \hline
 %
 6.5.1(c) & 
-Proposals shall provide a specification of a metalanguage for importation in modular OSMs.	&
+Proposals shall provide a specification of a metalanguage for importation in modular OMS.	&
 DOL allows the import of OMS by their IRI, see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
 	\\  \hline
 %
 6.5.1(d) & 
-Proposals shall provide a specification of a metalanguage for relationships between OSMs and their
+Proposals shall provide a specification of a metalanguage for relationships between OMS and their
 extracted modules e.g. the whole theory is a conservative extension of the module. 	&
 DOL provides such a construct with syntax \syntax{module m : o1 of o2 for sig}, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
 	\\ \hline
 %
 6.5.1(e) & 
-Proposals shall provide a specification of a metalanguage for relationships between OSMs and their
+Proposals shall provide a specification of a metalanguage for relationships between OMS and their
 approximation in less expressive languages such that the approximation is logically implied by the
 original theory, where the approximation generally has to be maximal in some suitable sense. 	&
 DOL provides such a construct with syntax \syntax{o keep logic},  see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.	\\ \hline
 %
 6.5.1(f) & 
 Proposals shall provide a specification of a metalanguage for links such as imports,
-interpretations, refinements, and alignments between OSMs/modules.
+interpretations, refinements, and alignments between OMS/modules.
 	&
 DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
 	\\ \hline
 %
 6.5.1(g) & 
-Proposals shall provide a specification of a metalanguage for combination of OSMs along links. 	&
+Proposals shall provide a specification of a metalanguage for combination of OMS along links. 	&
 DOL provides such a construct with syntax \syntax{combine n}, where \syntax{n} is a network of OMS and mappings (links),  see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
 	\\ \hline
 %
@@ -809,7 +810,7 @@ environment, which can contain arbitrary logics, see \ref{c:direct-sematics}.
    \\ \hline
 %
 6.5.2(b)& 
-The metalanguage shall neither be restricted to OSMs in a specific domain, nor to OSMs represented
+The metalanguage shall neither be restricted to OMS in a specific domain, nor to OMS represented
 in a specific logical language.	&
 The semantics of DOL is based on a heterogeneous logical
 environment, which can contain arbitrary logics, see \ref{c:direct-sematics}.
@@ -823,8 +824,8 @@ See \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
    \\ \hline
 %
 6.5.2(d)& 
-The metalanguage shall provide syntactic constructs for (i) structuring OSMs regardless of the
-logic in which their sentences are formalized and (ii) basic and structured OSMs and facilities to
+The metalanguage shall provide syntactic constructs for (i) structuring OMS regardless of the
+logic in which their sentences are formalized and (ii) basic and structured OMS and facilities to
 identify them in a globally unique way.
 	&
 For basic OMS, see 6.5.2(c) above.
@@ -834,7 +835,7 @@ The structuring constructs for OMS in \ref{c:focused-OMS} and \ref{a:dol-text:OM
 %
 6.5.3(a)& 
 An abstract syntax specified as an SMOF compliant meta model.	&
-Currently, the abstract syntax is specified using EBFN, see clause \ref{c:abstract-syntax}. An initial SMOF meta model is given in annex \ref{a:MOF}.
+Currently, the abstract syntax is specified using EBNF, see clause \ref{c:abstract-syntax}. An initial SMOF meta model is given in annex \ref{a:MOF}.
    \\ \hline
 %
 6.5.3(b)& 
@@ -977,11 +978,11 @@ This is left for future work.
 \endlastfoot
 %
 6.7.(a)	& 
-Do existing language standards need to be extended or adapted in order to make them OntoIOp conformant.	&
+Do existing language standards need to be extended or adapted in order to make them OntoIOp conforming.	&
 The goal of DOL is to support existing languages without any
-adpations, see also 6.5.4(a). However, in order to meet
-requirement 6.5.6, DOL-conformant languages should support the
-use of IRIs. If they do not, there is a mechanism of assining IRIs
+adaptions, see also 6.5.4(a). However, in order to meet
+requirement 6.5.6, DOL-conforming languages should support the
+use of IRIs. If they do not, there is a mechanism of assigning IRIs
 to (fragments of) language documents even if the language itself does not support
 this, see \ref{c:conform:serialization}.
 Moreover, there is a mechanism for injecting annotations
@@ -1058,7 +1059,7 @@ DOL is be applicable to multiple logics (see also 6.8(c) below).
 %
 6.8(b)		&
 Proposals covering existing language standards without (or with fewer) modifications will be favored.	&
-Any document providing an OMS in a serialization of a DOL conformant
+Any document providing an OMS in a serialization of a DOL conforming
 language can be used as-is in DOL, by reference to its IRI. See \ref{sec:existing-serialization}.
 	\\ \hline
 %
@@ -1167,7 +1168,7 @@ The following are within the scope of this \IS:
 \item\label{it:scope-heterogeneous} homogeneous OMS as well as heterogeneous OMS (the combining parts written in different languages)
 \item mappings between OMS (mapping OMS symbols to OMS symbols)
 \item OMS as well as OMS networks (the latter involve several OMS and mappings between them)
-\item \label{it:scope-translation} translations between different OMS languages conformant with DOL (translating whole OMS to another language)
+\item \label{it:scope-translation} translations between different OMS languages conforming with DOL (translating whole OMS to another language)
 \item\label{it:scope-annotation} annotation and documentation of OMS, mappings between OMS, symbols,
 and sentences
 \item recommendations of vocabularies for annotating and documenting OMS
@@ -1203,11 +1204,11 @@ serializations, translations and applications. This \IS describes the conformanc
 number of OMS languages, namely OWL 2, Common Logic, RDF and RDFS, as well as translations among
 these, in its informative annexes.
 
-It is expected that DOL will be used for more languages than this normative set of DOL-conformant
-languages. There will be a \textbf{registry for DOL-conformant languages and translations} hosted
+It is expected that DOL will be used for more languages than this normative set of DOL-conforming
+languages. There will be a \textbf{registry for DOL-conforming languages and translations} hosted
 at \url{http://ontohub.org}.  This will ensure that this \IS remains interoperable with past,
 present and even future OMS languages.  The registry shall also include descriptions of
-DOL-conformant languages and translations (as well as other information needed by implementors
+DOL-conforming languages and translations (as well as other information needed by implementors
 and users) in machine-processable form.  
 
 There will be Maintenance Authority (MA)\footnote{or, depending on advisability, a Registration
@@ -1238,32 +1239,32 @@ of entities that the OMS language supports.
 %\item[Semantic conformance] 
 %\end{description}
 
-An OMS language is conformant with DOL if it satisfies the following conditions:
+An OMS language is conforming with DOL if it satisfies the following conditions:
 \begin{enumerate}
 \item its abstract syntax is specified as an SMOF compliant meta model
 or as an EBNF grammar;
-\item its logical language aspect (for expressing basic OMS) is conformant,
+\item its logical language aspect (for expressing basic OMS) is conforming,
  and in particular has a semantics (see below),
 \item it has at least one serialization in the sense of section~\ref{c:conform:serialization};
 %\item complete round-trip mappings from the human-readable serialization
 %to the abstract syntax and vice versa;
-\item either there exists a translation of it into a conformant
+\item either there exists a translation of it into a conforming
   language\footnote {For example, consider the translation of OBO1.4
     to OWL, giving a formal semantics to OBO1.4.}, or:
 \begin{enumerate}
-\item the logical language aspect (for expressing basic OMS) is conformant, and in particular has a semantics (see below),
+\item the logical language aspect (for expressing basic OMS) is conforming, and in particular has a semantics (see below),
 \item  the
 structuring language aspect (for expressing structured OMS and relations
-between those) is conformant (see below), and
+between those) is conforming (see below), and
 \item the annotation language aspect (for expressing comments and annotations)
-is conformant (see below).
+is conforming (see below).
 \end{enumerate}
 \end{enumerate}
 
 
 The \emph{logical language aspect} of an OMS language
 is %semantically
-conformant with DOL if each logic corresponding to a profile (including
+conforming with DOL if each logic corresponding to a profile (including
 the logic corresponding to the whole logical language aspect) is presented as an
 institution \cite{GoguenBurstall92}.
 % It may additionally be presented as an institution, leading
@@ -1276,11 +1277,11 @@ corresponding to several logics (for example, OWL 2 has profiles EL, RL and QL, 
 whole OWL 2 itself).
 
 
-The \emph{structuring language aspect}  of an OMS language is conformant with DOL if it can be
+The \emph{structuring language aspect}  of an OMS language is conforming with DOL if it can be
 mapped to DOL's structuring language in a semantics-preserving way. The structuring language aspect
 \may be empty.
 
-The \emph{annotation language aspect} of an OMS language is conformant with DOL if its constructs
+The \emph{annotation language aspect} of an OMS language is conforming with DOL if its constructs
 have no impact on the semantics. The annotation language aspect \shall be non-empty; it \shall
 provide the facility to express comments.
 
@@ -1306,15 +1307,15 @@ Also, a translation between OMS languages based on such logics must be consisten
 translation between these logics.  Translations should not break structuring language aspects nor
 comments/annotations either.
 
-A logic translation is conformant with DOL if it is presented either as an institution morphism or
+A logic translation is conforming with DOL if it is presented either as an institution morphism or
 as an institution comorphism.  
 %If the
 %languages are presented additionally as institutions, the translations
 %\may also be presented as an institution morphism or an institution
 %comorphism.
 
-A language translation is conformant with DOL if it is a mapping
-between the abstract syntaxes that restricts to a conformant logic
+A language translation is conforming with DOL if it is a mapping
+between the abstract syntaxes that restricts to a conforming logic
 translation when restricted to the logical language aspect. Language
 translations \may also translate the structuring language aspect, in
 this case, they \shall preserve the semantics of the structuring
@@ -1364,7 +1365,7 @@ namespaces.\todonote[author=Christoph
 Lange,date=D:201110051438+02'00',type=fyi]{That means that in a heterogeneous
 OMS we can recognize that a sentence is, \eg, stated in OWL, without
 explicitly ``tagging'' it as ``OWL'' (which we would have to do in the case
-of  a serialization that is merely text conformant).}
+of  a serialization that is merely text conforming).}
 \item The schema shall not forbid attributes from foreign namespaces (here: the
  DOL namespace) on any elements\ednote{Christoph (2014-03-26): the rationale is that in an XML serialization we wouldn't want to inject identifiers into completely unstructured XML comments (<!-- 
 … -->) but rather into well-structured attributes from some DOL namespace to-be-defined (think of <axiom dol:id="foo-ax">)}\todonote[author=Christoph
@@ -1401,7 +1402,7 @@ The given serialization has to satisfy all of the following conditions:
 \end{itemize}
 
 \item[Standoff markup conformance]
-An OMS language is standoff markup conformant with DOL if one of its serializations conforms with
+An OMS language is standoff markup conforming with DOL if one of its serializations conforms with
 the requirements for the \mimetype{text/plain} media type specified in \nisref{IETF/RFC 2046},
 section 4.1.3.  Note that conformance with \mimetype{text/plain} is a prerequisite for using, for
 example, fragment URIs in the style of \nisref{IETF/RFC 5147} for identifying text ranges.
@@ -2154,7 +2155,7 @@ that targets specific applications or reasoning methods}
     OWL uses the term ``serialization''; the following are standard OWL serializations: OWL functional-style syntax, OWL/XML, OWL Manchester syntax, plus any standard serialization of RDF (\eg RDF/XML, Turtle, \dots).  However, RDF/XML is the only one tools are required to implement.
   \end{example}
   \begin{example}
-Common Logic uses the term ``dialect''; the following are standard Common Logic dialects: Common Logic Interchange Format (CLIF), Conceptual Graph Interchange Format (GCIF), eXtended Common Logic Markup Language (XCL).
+Common Logic uses the term ``dialect''; the following are standard Common Logic dialects: Common Logic Interchange Format (CLIF), Conceptual Graph Interchange Format (CGIF), eXtended Common Logic Markup Language (XCL).
   \end{example}
 
 
@@ -3612,7 +3613,7 @@ Queries are a means to extract information from an OMS.  DOL' \syntax{QueryDefn}
 ``select''-type queries that deliver an answer substitution for the query variables. (Answer) 
 substitutions can be stored separately, using a \syntax{SubstDefn}. A
 \syntax{ResultDefn} expresses that certain answer substitutions are
-the result of a query. Optioally, a result can be expressed to be
+the result of a query. Optionally, a result can be expressed to be
 complete, meaning that it comprises all answer substitutions to the query.
 }
 \begin{lstlisting}[language=ebnf,escapeinside={<>},mathescape]  % abstract syntax
@@ -3835,7 +3836,7 @@ prefix maps, even if the serialization does not support prefix maps otherwise.
 \sclause{Annotations}\label{s:annotations}
 
 \todonote{this subclause will be moved to annex M}
-~\todonote[author=Christoph Lange,date=D:201108061340+02'00',type=todo]{Properly integrate this text from our LaRC 2011 paper} Annotations always have a subject, which is identified by an IRI. Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a library may employ RDF annotations that use XPointer or \nisref{IETF/RFC 5147} as means of non-destructively referencing pieces of XML or text by URI.\footnote{We intend to utilise the extensibility of the XPointer framework by developing additional XPointer schemes, \eg for pointing to subterms of Common Logic sentences.}
+~\todonote[author=Christoph Lange,date=D:201108061340+02'00',type=todo]{Properly integrate this text from our LaRC 2011 paper} Annotations always have a subject, which is identified by an IRI. Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a library may employ RDF annotations that use XPointer or \nisref{IETF/RFC 5147} as means of non-destructively referencing pieces of XML or text by URI.\footnote{We intend to utilize the extensibility of the XPointer framework by developing additional XPointer schemes, \eg for pointing to subterms of Common Logic sentences.}
 
 \clause{DOL text serialization}\label{a:text-syntax}
 
@@ -4160,7 +4161,7 @@ Table~\ref{tab:key-signs} following key signs are reserved, and are not availabl
 
 \sclause{Integration of Serializations of Conforming Languages}
 \label{sec:existing-serialization}
-Any document providing an OMS in a serialization of a DOL conformant
+Any document providing an OMS in a serialization of a DOL conforming
 language can be used as-is in DOL, by reference to its IRI.
 \ednote{TODO: injection of comments, \%implies etc. See \ref{c:req:annotation} and \ref{s:annotations}.}
 
@@ -5081,7 +5082,7 @@ If \syntax{LogicTranslation} is missing, it defaults to the identity comorphism 
 \semdom{sem(\Gamma, \syntax{LogicTranslation}) = (\Phi, \alpha,\beta)}
 
 $(\Phi,\alpha,\beta)$ is the institution comorphism
-named by \syntax{LogicTranslation} in the heterogenous logical environment.
+named by \syntax{LogicTranslation} in the heterogeneous logical environment.
 
 %%%%%%%%%%%%%%%%%%%%%%%
 
@@ -5107,7 +5108,7 @@ and $\sigma:\Sigma'\to\Sigma$ is the inclusion.
 \semdom{sem(\Gamma, L, \syntax{LogicReduction}) = (\Phi, \alpha,\beta)}
 
 $(\Phi,\alpha,\beta)$ is the institution morphism
-named by \syntax{LogicReduction} in the heterogenous logical environment.
+named by \syntax{LogicReduction} in the heterogeneous logical environment.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -6079,10 +6080,10 @@ The translations are specified in \cite{OntoGraph}.
 
 The list of chosen logics includes those ones required as mandatory
 ones in the RFP. Since these are only ontology and modeling
-languagegs, also a specification language is included, namely the
+languages, also a specification language is included, namely the
 Common Algebraic Specification Language (CASL).  The list of
 translations comprises standard translations from the literature,
-as well as furhter translations that are considered useful for
+as well as further translations that are considered useful for
 logical interoperability.
 
 
@@ -6645,7 +6646,7 @@ This annex sketches scenarios that outline how DOL is intended to be applied.  F
 \end{usecase}
 
 \begin{usecase}{Interpreting the OWL formalization of the DOLCE foundational ontology in First-order logic}{potential use case}{Logical OMS mappings}
-  DOLCE is a foundational ontology that has primarily been formalized in the first-order logic ontology language KIF (a predecessor of Common Logic), but also in OWL (``DOLCE Lite'') \cite{dolce}. This ‘OWLized’ version was targeting use in semantic web services and domain ontology interoperability, and to provide the generic categories and relationships to aid domain ontology development. DOLCE has been used also for semantic middleware, and in OWL-formalised ontologies of neuroimaging, computing, ecology, and data mining and optimization.
+  DOLCE is a foundational ontology that has primarily been formalized in the first-order logic ontology language KIF (a predecessor of Common Logic), but also in OWL (``DOLCE Lite'') \cite{dolce}. This ‘OWLized’ version was targeting use in semantic web services and domain ontology interoperability, and to provide the generic categories and relationships to aid domain ontology development. DOLCE has been used also for semantic middleware, and in OWL-formalized ontologies of neuroimaging, computing, ecology, and data mining and optimization.
   Given the differences in expressivity, DOLCE Lite had to simplify certain notions.  For example, the DOLCE Lite formalization of ``temporary parthood'' (something is part of something else at a certain point or interval in time) omits any information about the time, as OWL only supports binary predicates (a.k.a.\ ``properties'').  That leaves ambiguities for modeling a view from DOLCE Lite to the first-order DOLCE, as such a view would have to reintroduce the third (temporal) component of such predicates:
   \begin{itemize}
   \item Should a relation asserted in terms of DOLCE Lite be assumed to hold for \emph{all} possible points/intervals in time, \ie should it be universally quantified?
@@ -6653,7 +6654,7 @@ This annex sketches scenarios that outline how DOL is intended to be applied.  F
   \item Or should a concrete value for the temporal component be assumed, \eg ``0'' or ``now''?
   \end{itemize}
   
-  DOL would support the formalization of  all of these views and, given suitable consistency checking tools, the analyzation of  whether any such view would satisfy all further axioms that the first-order DOLCE states about temporal parthood.
+  DOL would support the formalization of  all of these views and, given suitable consistency checking tools, the analysis of  whether any such view would satisfy all further axioms that the first-order DOLCE states about temporal parthood.
 \end{usecase}
 
 \begin{usecase}{Extending the OWL Time ontology to a more comprehensive coverage of time}{potential use case}{Logical OMS mappings}
@@ -6675,7 +6676,7 @@ Time, which are then properly formalized with $\mathcal{DLR_{US}}$ or
 a leaner variant TDL-Lite [\cite{Artale07time}], where notions such as
 (some time) ``before'' are given a formal semantics of the intended
 meaning that the plain OWL Times human-readable object property does
-not have. The latter, then, would enable the modeller to represent the
+not have. The latter, then, would enable the modeler to represent the
 meaning---hence, restrict the possible models---and check the
 consistency of the temporal constraints and so-called `evolution
 constraints' in the ontology (evolution constraints constrain
@@ -6698,7 +6699,7 @@ he is a boxer [\cite{AGK08}].
   \begin{description}
   \item[module provenance] author, date, version, description, keyword, parent ontology\footnote{Note that this use of the term ``module'' in COLORE corresponds
 to the term \termref{structured OMS} in this \IS}
-  \item[axiom source provenance] name, author, year\footnote{Note that this may cover any \termref{sentencs} in the sense of this \IS}
+  \item[axiom source provenance] name, author, year\footnote{Note that this may cover any \termref{sentences} in the sense of this \IS}
   \item[direct relations] maps (signature morphisms), definitional extension, conservative extension, inconsistency between ontologies, imports, relative interpretation, faithful interpretation, definable equivalence
   \end{description}
 
@@ -6764,7 +6765,7 @@ to the term \termref{structured OMS} in this \IS}
 \sclause{The Heterogeneous Tool Set (Hets)}\label{a:hets} The
 Heterogeneous Tool Set (Hets) is a parsing, analysis and proof tool
 for OMS, OMS networks and OMS mappings written in DOL and
-DOL-conformant languages.  It supports a wide range of OMS languages
+DOL-conforming languages.  It supports a wide range of OMS languages
 and language translations, in particular OWL, RDF, Common Logic,
 first-order logic and CASL. Support for MOF, UML class diagrams and
 state machines is in preparation.  Hets has been co-developed together
@@ -6774,7 +6775,7 @@ proof tools like theorem provers, supporting various logics. Logics
 that are not directly supported by any proof tool can be supported
 indirectly, through a logic mapping into a tool-supported logic.
 \footnote {While the Hets parser should support the
-  current version of DOL as presented in this standard, tt can happen
+  current version of DOL as presented in this standard, it can happen
   that the most recent changes to the DOL syntax are not fully
   supported by the Hets static analysis and proof support yet. This
   will be fixed in the future. }
@@ -6786,9 +6787,9 @@ available at the following URL \url{https://github.com/spechub/hets}.
 \sclause{Ontohub, Modelhub, Spechub}\label{a:ontohub}
 
 Ontohub/Modelhub/Spechub is a repository engine for managing 
-OMS, OMS networks and OMS mappings written in DOL and DOL-conformant
+OMS, OMS networks and OMS mappings written in DOL and DOL-conforming
 languages.  It supports the same range of OMS languages and language
-translations as Hets (indeed, Hets is used for analysing DOL files).
+translations as Hets (indeed, Hets is used for analyzing DOL files).
 
 Users of Ontohub/Modelhub/Spechub can upload, browse, search and annotate 
 OMS in various languages via a web frontend, 
@@ -6823,11 +6824,11 @@ Ontohub/Modelhub/Spechub enjoys the following distinctive features:
 Ontohub/Modelhub/Spechub is not a repository, but a semantic repository engine. This
 means that Ontohub/Modelhub/Spechub OMS are organized into repositories.
 The
-organisation into repositories has several advantages:
+organization into repositories has several advantages:
 \begin{itemize}
 \item
  Firstly, repositories provide a certain structuring of OMS,
- let it be thematically or organisational. Access rights can be given
+ let it be thematically or organizational. Access rights can be given
  to users or teams of users per repository. Typically, read access is
  given to everyone, and write access only to a restricted set of users
  and teams. However, also completely open world-writeable repositories
@@ -6841,7 +6842,7 @@ organisation into repositories has several advantages:
  
 \item
  Secondly, repositories are git repositories. Git is a popular
- decentralised version control system. With any git client, the user
+ decentralized version control system. With any git client, the user
  can clone a repository to her local hard disk, edit it
  with any editor, and push the changes back to Ontohub/Modelhub/Spechub. Alternatively,
  the web frontend can be used directly to edit OMS; pushing
@@ -6989,7 +6990,7 @@ respective component.
 \ssclause{$\RDF \rightarrow \FOL^{=}$} :
 
 This is a straightforward extension of $\SimpleRDF \rightarrow \RDF$,
-axiomatising explicitly the extra conditions imposed on models. $\RDFS
+axiomatizing explicitly the extra conditions imposed on models. $\RDFS
 \rightarrow \FOL^{=}$ and $\RDFSOWL\rightarrow \FOL^{=}$ are
 similar. The theory of the fixed part is (after translation to
 $\FOL^{=}$) added to the translations of
@@ -7003,14 +7004,14 @@ unary predicate (these are called sort predicates), and each function
 and predicate symbol is translated by erasing its typing information
 in the signature, while turning it into a sentence, using the sort
 predicates. A sentence is translated by erasing the type information
-and relativising quantifiers to the sort predicates. A model is
+and relativizing quantifiers to the sort predicates. A model is
 translated by turning the interpretations of sort predicates into
 carrier sets, and keeping functions and predicates.
 
 \ssclause{$\ecoOWL \rightarrow SROIQ(D)$} 
 
 This uses a similar technique: the different components are mapped
-into classes, which are then used to relativise (using intersection
+into classes, which are then used to relativize (using intersection
 with these classes) sentences.
 
 \ssclause{\Flogic $\rightarrow \FOL^{=}$} 
@@ -7018,7 +7019,7 @@ with these classes) sentences.
 The additional ingredients of \Flogic are two binary relations and a
 bunch of partial functions; all these can be coded as (suitably
 axiomatised) predicates in a straightforward way. Note that the
-translated signatures become infinite due to the parameterisation of
+translated signatures become infinite due to the parameterization of
 $I_\rightarrow$ etc.\ over the natural numbers.
 
 \ssclause{$\Clogic \rightarrow \CASL$} 
