Fix to Module Extract

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -5137,14 +5137,13 @@ the heterogeneous logic env?}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \semdom{sem(\Gamma, (\Sigma, \Delta), \syntax{Extraction})= (I, \Sigma', \Delta')}
-$$sem(\Gamma, \Sigma, \Delta, \syntax{'extraction' , 'keep-signature', InterfaceSignature})= (\Sigma', \Delta')$$ 
-where $\Sigma'' = sem(\Sigma, \syntax{'keep-signature', InterfaceSignature})$ and 
+
+$$sem(\Gamma, \Sigma, \Delta, \syntax{'extraction' , Qual, InterfaceSignature})= (\Sigma', \Delta')$$ 
+%
+where $\Sigma'' = sem(\Sigma, \syntax{Qual}, \syntax{InterfaceSignature})$ and 
  $(\Sigma', \Delta')$  is the smallest  sub-theory of $(\Sigma, \Delta)$ such that % $\Sigma'' \subseteq \Sigma'$ and 
   $$(\Sigma' \cup \Sigma'', \Delta \setminus \Delta')  \equiv_{\Sigma' \cup \Sigma''} (\Sigma' \cup \Sigma'' , \emptyset).$$
 The latter can also be formulated as $\{M\forget{\Sigma'\cup \Sigma''} \mid M  \models \Delta \setminus \Delta' \} = \{ M\forget{\Sigma'\cup \Sigma''} \mid M \models \emptyset \}$. %The empty set of sentences (?) 
-
-$$sem^T(\Sigma, \Delta, \syntax{'extraction' , 'remove-signature', InterfaceSignature})= (\Sigma', \Delta')$$
-
 %%%%%%%%%%%%%%%%%%%%%%%
 
 \semdom{sem(\syntax{Approximation})}
